Fixed main navigation mobile functionality, added collapsed nav and icon. Tested SVG / css animations

--- a/resources/src/webpack/sass/4-layouts/_nav.scss
+++ b/resources/src/webpack/sass/4-layouts/_nav.scss
@@ -44,3 +44,20 @@
   }
 
 }
+
+.bottomrow
+{
+
+  .navbar-toggler
+  {
+    outline: none;
+    cursor: pointer;
+  }
+
+  &__hamburger
+  {
+    font-size: 2em;
+  }
+
+
+}
